# pydiscourse

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  CONTRIBUTING.rst  DEVELOP.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: test.yml
doc/: Makefile  conf.py  develop.txt  index.rst  intro.txt
docs/: conf.py  develop.rst  intro.rst  make.bat  modules.rst  pydiscourse.rst
pydiscourse/: __init__.py  apidev.py  client.py  exceptions.py  main.py  sso.py
src/pydiscourse/: __init__.py  client.py  exceptions.py  main.py  sso.py
tests/: conftest.py  test_client.py  test_sso.py
