[metadata]
name = pydiscourse
version = attr: pydiscourse.__version__
author = "Marc Sibson and contributors"
author_email = "ben@benlopatin.com"
license = "MIT"
url = "https://github.com/bennylope/pydiscourse"
description = "A Python library for the Discourse API"
long_description = file: README.rst, HISTORY.rst
platforms =
    OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    =src
install_requires =
    requests>=2.4.2
    typing; python_version<"3.6"
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    pydiscoursecli = pydiscourse.main:main

[bdist_wheel]
universal = 1

[build-system]
requires =
    setuptools >= "40.9.0"
    wheel
